--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,14 +1,25 @@
-
-
-<h1> Enter image_tag: <br>
-<input style="width:500px; height:30px;"  id ="image" type="text" name="image_tag" placeholder="<img src=&quot;path/test.png&quot; class =&quot;btn btn-primary&quot; alt =&quot;alt-attribute&quot;>"> 
-<button id ="image_btn">submit</button>
+<div class="container">
+<div class="row">
+<div class="col-md-12">
+<h1> Enter image_tag: 
 </h1>
-
-
-<div id ="result">
-	
 </div>
+
+<div class="col-md-12">
+<input style="width:100%"  id ="image" type="text" name="image_tag" placeholder="<img src=&quot;path/test.png&quot; class =&quot;btn btn-primary&quot; alt =&quot;alt-attribute&quot;>"> 
+
+<button style="margin-top: 10px;" class ="btn btn-primary-outline" id ="image_btn">submit</button>
+</div>
+
+<div class="col-md-12">
+<div id ="result">
+</div>
+</div>
+
+
+</div>
+</div>
+
 
 
 
@@ -29,7 +40,7 @@
 		  dataType: 'json',
 		  success: function(response){
 		  	console.log(response["result"])
-		  	$("#result").append('<h3>'+ response["result"] +'</h3>')
+		  	$("#result").append('<p>'+ response["result"] +'</p>')
 		  }
 		});
 	});
