change post url

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -31,7 +31,7 @@
 		// console.log("hi" + data_send["send"]);
 		$.ajax({
 			type: "POST",
-			url: "http://localhost:3000/home/transform",
+			url: "https://auto-erb.herokuapp.com/home/transform",
 			data: data_send,
 			dataType: 'json',
 			success: function(response){
